--- a/webCSS.html
+++ b/webCSS.html
@@ -110,13 +110,13 @@
 <TEXTAREA name="example2" cols="200" rows="35" color="cccccc" readonly >
 #content #left{
              width:680px;
-             heigth:600px;
+             height:600px;
              border:1px solid #ff0;
              float;left;
          }
           #content #right{
              width:260px;
-             heigth:600px;
+             height:600px;
              border:1px solid #00f;
              float;left;
          }
@@ -132,37 +132,37 @@
       <style type="text/css">
          #warp{
              width:1005px;
-             heigth:800px;
+             height:800px;
              border:1px solid #ccc;
              margin:0 auto;
          }
   
          #top{
              width:1005px;
-             heigth:200px;
+             height:200px;
              border:solid #f00;
 
          }
           #content{
              width:1005px;
-             heigth:600px;
+             height:600px;
              border:1px solid #0f0;
          }
           #content #left{
              width:680px;
-             heigth:600px;
+             height:600px;
              border:1px solid #ff0;
              float;left;
          }
           #content #right{
              width:260px;
-             heigth:600px;
+             height:600px;
              border:1px solid #00f;
              float;left;
          }
           #footer{
              width:100%;
-             heigth:68px;
+             height:68px;
              border:1px solid #00f;
          }
 
