--- a/webCSS.html
+++ b/webCSS.html
@@ -112,13 +112,13 @@
              width:680px;
              height:600px;
              border:1px solid #ff0;
-             float;left;
+             float:left;
          }
           #content #right{
              width:260px;
              height:600px;
              border:1px solid #00f;
-             float;left;
+             float:left;
          }
         <div id="content">
          <div id="left"></div>
@@ -152,13 +152,13 @@
              width:680px;
              height:600px;
              border:1px solid #ff0;
-             float;left;
+             float:left;
          }
           #content #right{
              width:260px;
              height:600px;
              border:1px solid #00f;
-             float;left;
+             float:left;
          }
           #footer{
              width:100%;
