--- a/webCSS.html
+++ b/webCSS.html
@@ -182,11 +182,100 @@
   
 <h3 id="继承">当使用了float后此元素不再属于其父元素，如背景颜色没有显示。将其父元素设置overflow，令其溢出显示。overflow可以使大量内容在小区域里显示，会自动带有滚动条 </h3>
 
-<p> </p>
+<p> 代码见框内（点击代码区域可变为蓝色）</p>
+<TEXTAREA name="example2" cols="200" rows="35" color="cccccc" readonly >
+<html>
+   <head>
+      <title></title>
+      <meta charset="utf-8" />
+      <style type="text/css">
+      /*DOCTYPE 取消链接下划线*/
+       a{
+        text-decoration:none;
+       }
+       /*取消列表点*/
+       /*背景颜色设置*/
+       /*设置溢出*/
+       ul{
+        list-style:none;
+        background-color:#0f8;
+        overflow:auto;
+       }
+       /*左浮动*/
+       ul li{
+          float:left;
+         }
 
+</style>
+</head>
+<body>
+        <div id="wrapper">
+      
+          <div class="menu">
+              <ul>
+                  <li>网站首页</li>
+                     <li><a href="list.html"> <li><a href="list.html">&nbsp;&nbsp;&nbsp;学校概况</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;规章制度</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;德育网</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;教研网</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;名师风采</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;高考专栏</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;图书馆</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;校友会</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;河中论坛</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;查询系统</a></li>
+                    <li><a href="#" class="specil">&nbsp;&nbsp;&nbsp;东校区</a></li>               
+                </ul>
+            </div>
+</body>
+</html>
+ </TEXTAREA>
+  代码效果图：<html>
+   <head>
+      <title></title>
+      <meta charset="utf-8" />
+      <style type="text/css">
+      /*DOCTYPE 取消链接下划线*/
+       a{
+        text-decoration:none;
+       }
+       /*取消列表点*/
+       /*背景颜色设置*/
+       /*设置溢出*/
+       ul{
+        list-style:none;
+        background-color:#0f8;
+        overflow:auto;
+       }
+       /*左浮动*/
+       ul li{
+          float:left;
+         }
 
-
-<h2 id="2初始化和类的加载">2、 </h2>
+</style>
+</head>
+<body>
+        <div id="wrapper">
+      
+          <div class="menu">
+              <ul>
+                  <li>网站首页</li>
+                     <li><a href="list.html"> <li><a href="list.html">&nbsp;&nbsp;&nbsp;学校概况</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;规章制度</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;德育网</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;教研网</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;名师风采</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;高考专栏</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;图书馆</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;校友会</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;河中论坛</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;查询系统</a></li>
+                    <li><a href="#" class="specil">&nbsp;&nbsp;&nbsp;东校区</a></li>               
+                </ul>
+            </div>
+</body>
+</html>
+<h2 id="2初始化和类的加载">2、定位 </h2>
 
 <p> </p>
 
