--- a/linuxshizhan.html
+++ b/linuxshizhan.html
@@ -1,1 +1,103 @@
-Hello World
+<html>
+  <head>
+    <meta charset="utf-8">
+  
+</head>
+<body bgcolor="cccccc">
+
+   <p>本博客包含以下内容 </p>
+
+<ol>
+<li>文件操作命令上</li>
+<li>
+文件操作命令下 </li>
+<li>对文件内容操作命令 grep </li>
+
+</ol>
+
+
+
+<h2 id="1基本定义">1、文件操作命令上 touch file cp mv rm </h2>
+
+
+
+<h3 id="继承"> </h3>
+
+<p>改变命令行背景颜色，右击，changs settings   colour  modty </p>
+<p>touch 新建空文件夹或更新文件时间的标记 </p>
+
+<p> file 查看文件类型</p>
+
+<p> touch file1.txt file2.txt(同时创建了两个文件)</p>
+<p>  is查看所有文件，发现目录蓝色和文件黑色颜色不同</p>
+<p>file 1 输出 1：directory(目录)
+ </p>
+<p> cp file1  file2.txt 1 将file1 file2.txt复制到1中，因为file1 file2.txt与1在同目录下，故可以使用相对路径
+</p>
+
+<p> cd 1 进入目录1</p>
+<p>Ls 展示目录1下的所有内容 </p>
+<p> pwd 查看当前所在路径</p>
+<p> cd ..回到上一级目录</p>
+<p>clear  清屏 </p>
+
+<p>cp -r 1 2  因为1不是空的 -r是递归复制整个目录树 </p>
+
+<p> ls -l 查看目录下所有文件及目录属性</p>
+<p> cp -p file1 3 保持file1复制过去后属性不变</p>
+<p>rm file1  删除file1 </p>
+<p>rm -r 1   递归删除整个目录树 </p>
+
+<p> mkdir 1 建立空白目录1</p>
+<p> mv 1 3 5 将目录1 3 移动到5中</p>
+
+
+
+<h2 id="2初始化和类的加载">2、文件操作命令下 which find ln </h2>
+
+<p> echo $PATH echo意为输出 $PATH指环境变量 which只能在环境变量范围内查找内置命令文件和显示路径，而找不到shell的内部命令，例如cd。</p>
+
+<p> which mkdir 输出/bin/madir</p>
+
+<p> find /-name  file1.txt  find 寻找文件或目录，/表示当前根目录，-name 表示按文件名称查加</p>
+<p> Ctrl+C结束命令</p>
+<p> find 查找条件 范围</p>
+<p> 查找条件  -name 按名称查找 -type 按文件类型查找 -size按文件大小查找  -user按文件属主查找</p>
+
+<p> find -type  directory</p>
+<p> ln -s /home/file1.txt /home/2 在绝对路径目录/home/2下建立一个软链接文件file1.txt写上-S便是软链接，/home/file1.txt便是母文件， /home/2/file1.txt便是子文件，当子文件修改时母文件也会随之修改，当母文件修改时子文件也会随之修改。而删除子文件时母文件不变，而删除母文件时子文件随之毁损。
+不写-S便是硬链接，目录不能建立硬链接，其余与软链接相同。</p>
+<p> </p>
+<p> </p>
+
+<p> </p>
+
+
+<h2 id="3final关键字">3、 </h2>
+
+<p> </p>
+ 
+<h4>其它文章：</h4> 
+  <li><a href="https://liruida.github.io/webCSS.html
+ 
+">web开发CSS要点总结</a></li>
+  <li><a href="https://liruida.github.io/ps2tuoceng.html 
+">PS层次2~~图层操作</a></li>
+  
+  <li><a href="http://www.w3school.com.cn/ 
+">w3c官网发布标签</a></li>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+  <p>&nbsp;&nbsp;&nbsp;日积月累&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;挟山超海&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;弗能撼也&nbsp;&nbsp;&nbsp;&nbsp;</p>
+    </body>
+</html>
+
+
+
+
+ 
+
+
+
