--- a/ps2tuoceng.html
+++ b/ps2tuoceng.html
@@ -87,7 +87,9 @@
 ">web开发CSS要点总结</a></li>
    <li><a href="https://liruida.github.io/index.html 
 ">GitHub教程</a></li>
-  
+  <li><a href=" https://liruida.github.io/linuxshizhan.html
+ 
+">linux文件操作命令</a></li>
 </a></li>
   
   
