--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
 ">PS层次2~~图层操作</a></li>
    <li><a href="https://liruida.github.io/linux1.html
 ">Linux服务器安装过程</a></li>
-  
+  <li><a href=" https://liruida.github.io/linuxshizhan.html
+ 
+">linux文件操作命令</a></li>
+</a></li>
   <li><a href="http://lib.csdn.net/base/javase 
 ">Java SE知识库</a></li>
   <p>&nbsp;&nbsp;&nbsp;</p>
