--- a/ps4huabi.html
+++ b/ps4huabi.html
@@ -1,1 +1,121 @@
-Hello World
+<html>
+  <head>
+    <meta charset="utf-8">
+  <style type="text/css">
+      
+     p{
+       text-indent:2em;
+       }
+
+</style>
+</head>
+<body bgcolor="cccccc">
+
+   <p>本博客包含以下内容 </p>
+
+<ol>
+<li>画笔工具
+ </li>
+<li>涂抹工具
+ </li>
+  <li>
+ </li>
+  
+</ol>
+
+
+
+<h2 id="1基本定义">1、画笔工具 </h2>
+
+<ol>
+<li>画笔工具
+ </li>
+<li> 画笔预设</li>
+<li>铅笔工具 </li>
+<li> 橡皮擦工具
+</li>
+  <li>背景橡皮擦 </li> 
+  <li> 魔术橡皮擦
+  </li></ol>
+<p> 画笔工具的操作就是在画面上直接进行绘制，点击画笔工具，光标变成圆圈，圆圈代表画笔大小，shift键可画出直线，或连接两个点成一条直线，改变前景色，可改变画笔画的颜色，画笔状态下按住alt键，拾取颜色，点击吸取当前颜色，改变前景色，按住shift加alt加alt加鼠标右键可以使用hud拾色器。画笔预设选取器可以改变画笔大小，硬度，改变画笔大小:[]键，alt加右键水平移动，改变画笔硬度:shift加[]，alt加鼠标右键垂直移动，可以在预设画笔列表选择丰富的笔刷效果，快捷键，.结合shift，快速切换画笔预设，原色通道用灰度图像表示，示意发光强度，通过载入外部画笔来丰富我们的画笔库。
+</p>
+<p> 选择基本画笔，调节大小硬度，来新建简单画笔预设，自己画图形，或选择图片来自定义笔刷，通过画笔面板来创造任何我们想要的效果，画笔面板用于更加全面的调节，编辑画笔，调整间距后，新建画笔预设，定义画笔预设，存储笔刷文件，面板菜单，存储画笔，工具预设面板里可直接使用保存好各项参数的工具，与存储画笔区别在:保存的参数设置范围是不一样的。
+</p>
+<p> 图层锁定即是对图层或图层某部分进行操作保护，混合模式就是对我们绘画的模式进行更改的地方，不透明度就是设置色彩的不透明度的，在画笔模式下，快捷键:按下数学键调整画笔不透明度，流量好比是设定画笔里颜料流出来多少，不同的流量跟不透明度可使我们的绘制工作更加细腻，锁定透明像素，禁止对透明区域进行操作，使用喷枪样式，越按住鼠标左键不松，颜色会越多，两个按钮分别代表，对不透明度，大小使用压力，数位板通过笔尖的真实压力在ps里绘制，压力大小来控制画笔透明度和大小。
+</p>
+
+<p> 铅笔使用方法与画笔基本相同，铅笔的笔触带有锯齿，铅笔与画笔不同它有一个自动抹除选项。
+</p>
+<p> 橡皮工具跟画笔工具使用方法一样，第一，橡皮擦是擦除图层上的像素，第二，从像素擦的选项栏的模式里切除模式里切换擦除的模式，第三，抹到历史记录，跟历史记录工具效果是一样的，第四，学会了蒙版，橡皮擦工具基本是不用的，画笔和橡皮擦工具可以用在同层和蒙版上，还可以用在通道和快速蒙版上使用的
+</p>
+<p> 背景橡皮擦可智能擦除背景，得到主体图像，选择栏里的高级参数设置，取样方式不同擦出效果不同，擦除范围可选三种限制方式，容差越高擦除范围越大，反之越小，选择相应的前景色可以受到保护不被擦除。
+</p>
+<p> 魔术橡皮擦可以擦除相近颜色的区域。</p>
+
+<p> </p>
+<h3 id="继承"> </h3>
+
+<p> </p>
+
+
+
+<h2 id="2初始化和类的加载">2、涂抹工具 </h2>
+  <ol>
+<li>模糊锐化工具
+ </li>
+<li>涂抹工具</li>
+<li>加深减淡工具
+ </li>
+<li> 海绵工具
+</li>
+  <li>图章工具 </li> 
+  <li> 修复工具
+
+</li>
+   <li> 修补工具
+
+</li> <li>内容感知移动工具
+
+</li> <li> 红眼工具
+
+</li> </ol>
+<p> </p>
+<p> </p>
+<p> </p>
+
+<p> </p>
+<p> </p>
+<p> </p>
+<p> </p>
+
+<p> </p>
+
+
+<h2 id="3final关键字">3、 </h2>
+
+<p> </p>
+ 
+<h4>其它文章：</h4> 
+  <li><a href="https://liruida.github.io/webCSS.html
+ 
+">web开发CSS要点总结</a></li>
+  <li><a href="https://liruida.github.io/ps2tuoceng.html 
+">PS层次2~~图层操作</a></li>
+  
+  <li><a href="http://www.w3school.com.cn/ 
+">w3c官网发布标签</a></li>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+  <p>&nbsp;&nbsp;&nbsp;日积月累&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;挟山超海&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;弗能撼也&nbsp;&nbsp;&nbsp;&nbsp;</p>
+    </body>
+</html>
+
+
+
+
+ 
+
+
+
