--- a/ps3xuanqu.html
+++ b/ps3xuanqu.html
@@ -108,6 +108,8 @@
 ">web开发CSS要点总结</a></li>
   <li><a href="https://liruida.github.io/ps2tuoceng.html 
 ">PS层次2~~图层操作</a></li>
+ <li><a href="https://liruida.github.io/ps4huabi.html 
+">PS层次4画笔操作</a></li>
   <li><a href="http://www.acfun.cn/v/ac2755370 
 ">零基础乐理教程</a></li>
    <li><a href="http://blog.sina.cn/dpool/blog/s/blog_621889960102w0i1.html?md=gd
