--- a/ps4huabi.html
+++ b/ps4huabi.html
@@ -16,9 +16,9 @@
 <ol>
 <li>画笔工具
  </li>
-<li>涂抹工具
+<li>修复工具
  </li>
-  <li>
+  <li>填充颜色和图案
  </li>
   
 </ol>
@@ -59,7 +59,7 @@
 
 
 
-<h2 id="2初始化和类的加载">2、涂抹工具 </h2>
+<h2 id="2初始化和类的加载">2、修复工具 </h2>
   <ol>
 <li>模糊锐化工具
  </li>
@@ -79,6 +79,34 @@
 </li> <li> 红眼工具
 
 </li> </ol>
+<p> 此讲是关于一系列图像修复处理工具。模糊工具的主要功能是把图像变的模糊，使用模糊工具可以把图像拉开空间，距离感，在对图像进行模糊的同时还可以通过模式改变对象颜色，强度值越大，模糊效果越大，反之越小，对所有图层取样指的是可对所有可见图层进行模糊处理，勾选对所有图层取样操作都会作用于目标图层上，滤镜里也有可以制作模糊效果。锐化工具作用与模糊工具对立，它可以使得图像变的锐利清晰。原色通道用灰读图像表示，示意发光强弱，勾选保护细节可保护图像微小像素防止画面失真。</p>
+<p> 涂抹工具用法跟画笔一样，直接在画面上画就可以了，涂抹强度值越高，涂抹效果越强，选项栏参数，模糊，锐化工具相似，勾选手指绘画可以绘制前景色，快捷键alt，减淡，加深工具用法一样，效果相反。
+</p>
+<p>保护色调可以保护图像在使用减淡时色调方面失真，海绵工具作用，局部增加饱和度或降低饱和度，饱和度简单讲就是色彩的鲜艳程度，降低饱和度最终可以使图像接近黑白。锁定透明像素，禁止对透明区域进行操作，按住alt键，光标变成靶心形状后代表可以寻找仿制源，取样后就可以按照画笔用法来涂抹出仿制对象了，选项栏参数与画笔工具设置类似，对齐保证鼠标每次操作都与源点对齐而画出整片图像。当前图层模式在当前图层定义仿制源，当前和下方模式可以定义当前及下方图层图像为源，所有图层可以定义为画面上所有图像，切换仿制源面板在窗口中也可以找到，通过此可以对仿制源进行更多编辑，还可以从这里定义多个仿制源，位移参数记录仿制源位移的位置，设置宽，高参数可以仿制出放大缩小的仿制源图像，同理设置角度也可以仿制出旋转一定角度后的图像，下面的命令主要调节显示叠加的形式。
+
+ </p>
+
+<p>图案图章工具用法就是直接在画面上画图案。改变图层混合模式，产生融合效果，勾选印象派效果命令，就会绘画出印象派效果，修复画笔工具快捷键j，shift加j可以在工具组中进行切换，它的使用方法和仿制图章工具基本相同，使用修复画笔工具后，边缘会有融合的效果，仿制图章可以跨文档继续进行，把仿制源文档删除后，仿制源也就不存在了，仿制图章进行仿制很严格。修复画笔有一定的智能性，可以和周围环境进行融合，两者区别一个较智能一个较准确，修复画笔选项栏和仿制图章基本一样。
+ </p>
+<p> 使用污点修复画笔工具在污点上点击，绘画就可以了，在去污的过程中还可以选择相应的模式，内容识别是一种智能的识别方式，一般选择它，近似匹配计算较为简单，就近取样覆盖污点，创建纹理，在擦除污点同时创建出和周围相似的纹理效果，在某些有特殊纹理的图像上修复污点时就可以使用此模式了。</p>
+<p> 修补工具可以快速的对图画进行修复，首先是修补工具选项栏的四种选区模式，内容感知移动工具比修补工具更加智能和简单，在"适应"里控制边缘融合的效果，在移动模式下只需画出选区，移动就可以了，在移动模式下只需要画出选区，移动就可以了，在扩展模式下，做出选区移动后就复制出选区里的内容，在适应选项里决定了融合边缘程度的不同。</p>
+<p> 工具组里最后一个工具是红眼工具，眼睛在闪光灯作用下会扩张，而毛细血管会呈现出红色，使用红眼工具在红眼上夼一下就可以了，消除红眼。</p>
+<p>通过选项可以修改蒙版方式和显示区域颜色类型，还可以对图像进行修复。
+ </p>
+
+
+<h2 id="3final关键字">3、填充颜色和图案 </h2>
+ <ol>
+<li>油漆桶工具</li>
+<li>填充命令
+ </li>
+<li> 渐变工具
+</li>
+  <li>图层样式填充 </li> 
+  <li> 填充图层
+
+</li>
+  </ol>
 <p> </p>
 <p> </p>
 <p> </p>
@@ -89,10 +117,6 @@
 <p> </p>
 
 <p> </p>
-
-
-<h2 id="3final关键字">3、 </h2>
-
 <p> </p>
  
 <h4>其它文章：</h4> 
