--- a/linuxshizhan.html
+++ b/linuxshizhan.html
@@ -17,8 +17,11 @@
 <li>文件操作命令上</li>
 <li>
 文件操作命令下 </li>
-<li>对文件内容操作命令 grep </li>
-
+<li>对文件内容操作命令  </li>
+<li>压缩命令与vm编辑器</li>
+<li>
+组账号管理 </li>
+<li>文件与目录权限</li>
 </ol>
 
 
@@ -101,7 +104,7 @@
 <p> </p>
   
 <p> </p>
- <h3> 4.压缩命令与vm编辑器</h3>
+ <h2> 4.压缩命令与vm编辑器</h2>
 
 <p> </p>
  <p> </p>
@@ -114,7 +117,7 @@
 <p> </p>
 <p> </p>
 <p> </p>
-  <h4> 5.组账号管理</h4>
+  <h2> 5.组账号管理</h2>
 
 <p> </p>
  <p> </p>
@@ -126,7 +129,7 @@
 
 <p> </p>
 <p> </p>
-<p> </p><h5> 6.文件与目录权限</h5>
+<p> </p><h2> 6.文件与目录权限</h2>
 
 <p> </p>
  <p> </p>
