--- a/ps4huabi.html
+++ b/ps4huabi.html
@@ -107,9 +107,11 @@
 
 </li>
   </ol>
-<p> </p>
-<p> </p>
-<p> </p>
+<p> 填充工具和命令可以大概分为填充实色，渐变，图案等，油漆桶工具快捷键g，可以填充前景色和图案，建立选区后，填充在选区内进行，油漆桶用来填充相近颜色的区域，油漆桶工具还可以填充图案，混合模式来丰富填充的叠加效果，不透明度的数值决定填充的透明效果。编辑填充命令，快捷键shift加f5或shift加后退键，原色通道用灰度图像表示，示意发光强度，填充前景或背景色的快捷键十分常用，填充颜色可以任意选择颜色填充，内容识别填充具有智能计算的功能，填充图案，可以填充整体区域或选区的图案，编辑定义图案，可以定制自己得图形作为图案元素，填充历史记录，可以填充相应的历史源，填充命令另外有填充黑白灰颜色可选，并可以保留透明区域，图层锁定即是对图层或图层某部分进行操作保护。
+</p>
+<p> 渐变是一种特殊的填充，渐变工具的用法是点线拖拽，渐变拾色器可以选取预设得渐变类型，可以通过面板菜单进行更多的操作，渐变编辑器可以制作任何渐变的效果，色标的位置，色彩，透明度来控制渐变的效果，锁定透明像素，禁止对透明区域进行操作，色标可以自由的增加或删除，平滑度控制渐变过渡的平滑程度，了解一下杂色渐变，可以特殊效果时使用，五种渐变的模式，丰富渐变的过渡方式，结合shift键，锁定角度，更多渐变工具选项栏设置，渐变编辑器是常用的工具，ps还可以通过其他工具和命令完成填充或渐变效果的，双击图层缩览图可以唤出图层样式面板，通过颜色，渐变，图案叠加可以实现填充效果，三种叠加还可以同时作用在图层上，图层样式是针对图层额一种效果控制，功能很强大。
+</p>
+<p> 特殊的新建图层，填充图层，填充图层也具有可编辑性，可以随时调整</p>
 
 <p> </p>
 <p> </p>
