--- a/ps6mengban.html
+++ b/ps6mengban.html
@@ -1,7 +1,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-  
+    <style type="text/css">
+      
+     p{
+       text-indent:2em;
+       }
+
+</style>
 </head>
 <body bgcolor="cccccc">
 
