--- a/ps5bianhuan.html
+++ b/ps5bianhuan.html
@@ -61,7 +61,8 @@
 ">web开发CSS要点总结</a></li>
   <li><a href="https://liruida.github.io/ps2tuoceng.html 
 ">PS层次2~~图层操作</a></li>
-  
+  <li><a href="https://liruida.github.io/ps5bianhuan.html
+">PS层次5自由变换</a></li>
   <li><a href="http://www.w3school.com.cn/ 
 ">w3c官网发布标签</a></li>
   <p>&nbsp;&nbsp;&nbsp;</p>
