--- a/ps5bianhuan.html
+++ b/ps5bianhuan.html
@@ -11,32 +11,35 @@
 </head>
 <body bgcolor="cccccc">
 
-   <p>本博客包含以下内容 有待书写</p>
+   <p>本博客包含以下内容 自由变换</p>
 
 <ol>
-<li> </li>
-<li> </li>
-<li> </li>
-
+<li>自由变换
+ </li>
+<li> 移动变换
+</li>
+<li>旋转变换 </li>
+<li>斜切变换</li><li>变形变换 </li>
+  <li> 扭曲变换</li><li> 透视变换</li>
+  <li> </li>
+  
 </ol>
 
 
 
-<h2 id="1基本定义">1、 </h2>
+<h2 id="1基本定义"> 自由变换 </h2>
 
 
 
 <h3 id="继承"> </h3>
 
-<p> </p>
+<p> 此节是关于变换的操作。变换可以针对整个图层，组或链接图层，或者选区内，编辑 自由变换，ctrl加t，自由变换的控件框来控制变换的效果，自由变换是独立进行操作的模式，控点控制形变，参考点是变换轴心，参考点可以随意移动，或按alt键定位，选项栏变为自由变换参数选项设置，参考点位置按钮可以快速精准定位参考点，变换中的移动和移动工具基本一样，选项栏上可以调节x，y值进行精确控制对象移动，变换的结果要应用enter或者取消esc，变换状态下，可以用快捷键缩放平移，再次变换可以快捷的重复变换的操作。
+</p>
+<p>图层很重要，修改选项栏的百分比来实现精确缩放，图层锁定保护图层或部分，锁定透明像素，禁止对透明区域进行操作，ctrl加z可以还原一步变换的操作。缩放也可以再次变换，重复多次并复制，位图对象的缩放要谨慎，选项栏可以控制精确旋转的角度，手动旋转，结合shift，15度一档，改变参考点位置，以不同的轴心旋转，也可以使用再次变换并复制，制作出奇特效果。
+ </p>
 
-
-
-<h2 id="2初始化和类的加载">2、 </h2>
-
-<p> </p>
-
-<p> </p>
+<p> 斜切是一种倾斜效果的变换，变形是一种比较特殊的变换形式，变换控件为九宫格式的贝赛尔网面，变形模式的选项栏提供了许多预设的样式，变形不能再次变换。扭曲和透视需要鼠标来操控，移动控点，定位控点，完成变换操作，在自由变换模式下，按住ctrl键快速进入扭曲模式，透视也是直接拖拽控点定位，但其遵循透视法则.
+</p>
 
 <p> </p>
 <p> </p>
@@ -46,12 +49,28 @@
 <p> </p>
 <p> </p>
 <p> </p>
+
+
+<h2 id="2初始化和类的加载"> </h2>
+
+<p> </p>
+
+<p> </p>
+
+<p> </p>
+<p> </p>
+<p> </p>
+<p> </p>
+
+<p> </p>
+<p> </p>
+<p> </p>
 <p> </p>
 
 <p> </p>
 
 
-<h2 id="3final关键字">3、 </h2>
+<h2 id="3final关键字"> </h2>
 
 <p> </p>
  
