--- a/ps6mengban.html
+++ b/ps6mengban.html
@@ -11,20 +11,30 @@
 </head>
 <body bgcolor="cccccc">
 
-   <p>本博客包含以下内容 有待书写</p>
+   <p>本博客包含以下内容 </p>
 
 <ol>
-<li> </li>
-<li> </li>
-<li> </li>
-
+  <li>通道和蒙版 </li>
+  
+<li>补充1 </li>
+<li>补充2 </li>
+  
 </ol>
 
 
 
-<h2 id="1基本定义">1、 </h2>
+<h2 id="1基本定义">1、 通道和蒙版</h2>
+<li> 通道简介</li>
+<li> Alpha通道</li>
+<li>图层蒙版 </li>
+<li>快速蒙版 </li>
+<p> 此节讲通道和蒙版的基础知识，带有色彩和透明度信息的一系列通道，构成了图像，通道是基于图像的色彩或透明度来分析和编辑，图像本身带有原色通道，还可以添加专色通道，以及Alpha通道，一切的一切是为选区服务。</p>
+ <p>用于查看编辑通道的工具 通道面板，通道面板有通道列表，下方功能按钮，面板菜单组成，复合通道是原色通道的合成效果，原色通道用灰度图像表示，示意发光强度，可以通过首选项来修改原色通道的预览效果，色彩模式不同，通道构成也不同. </p>
+<p>Alpha通道，选区的好友，PSD TGA TIFF等格式的图片可以支持Alpha通道写入，通过存储选区，面板按钮，面板菜单，都可以创建Alpha通道，图层中不同的透明区域表示着选区的范围，不同的灰度表示不同的透明度，编辑通道和编辑图层一样，可以使用常用的工具和命令，灰阶像素的调整和形状的编辑，就是为了得到相应的选区，假如Alpha通道是块黑板，黑板上贴什么就是什么选区，基于原色通道的灰度编辑，可以获得复杂精细的选区。 </p>
+<p>图层蒙版可以隐藏和显示图层上的部分区域，图层蒙版编辑状态下，对应的就是一个临时的Alpha通道，添加黑色隐藏图像，添加白色显示图像，蒙版可以暂时停用或启用，快捷键shift加点击蒙版，蒙版可以像通道一样去编辑，另外还有调整蒙版特殊命令，快速蒙版就是一个临时的Alpha通道，快速蒙版模式的优势是快捷和图层叠加显示，通过选项可以修改蒙版方式和显示区域颜色类型，快速蒙版是一种模式，创立的选区是普通的临时选区，通道和蒙版是制作选区必学的知识。 </p>
+<p> </p>
 
-
+<p> </p>
 
 <h3 id="继承"> </h3>
 
@@ -32,30 +42,45 @@
 
 
 
-<h2 id="2初始化和类的加载">2、 </h2>
+<h2 id="2初始化和类的加载">2、补充1  </h2>
+  <ol>
+<li> 新建</li>
+<li> 修改文档参数</li>
+<li>打开，保存和关闭文档 </li>
+<li>ps使用前设置 </li>
+    </ol>
+<p>点击菜单栏，文件，新建，可以打开新建选项，可以设置参数，选择大小后，下面的宽度，高度，分辨率就会自动调整好了，建立好后。快捷键x可以切换前景色和背景色的切换。点击背景色弹出拾色器窗口，可以从中选择需要的颜色，新建，背景内容中选择背景色，文档颜色就变成我们选择的背景色了。 </p>
+
+<p> 再次修改文档参数，例如大小，点击菜单栏上的图像菜单，找到图像大小选项，像素的大小决定了文件的大小，文档大小改变需要结合分辨率，对于网络或显示屏的图片分辨率设为72或96。</p>
+
+<p> 打开，保存和关闭文档。ctrl加o可以快捷打开文件，选择文件类型，进行格式过滤，不过滤就选所有格式，可以鼠标框选，按住ctrl多选，按住shift连选，勾选图像序列，可以选择命名上有次序的多个图像，在文件窗口，鼠标左键按住不松，拖拽到工作区，文档名右边出现*表示已经修改尚未保存，在文件菜单中，有三种方式，第一种，存储，就是原地存储，第二种，存储为，可以选择存储的位置，名称，格式，其中psd文件是ps标准的文件格式，隐藏图层后会使文件变小，方便网络传输，第三种，存储为web所用格式，此种图片可以更好的适应网络。点击标签栏上的 就可以关闭文档了。
+</p>
+<p> ps使用前设置，暂存盘，历史记录设置，自动保存设置，快捷键设置，点击ctrl加k，找到首选项，在编辑菜单里也可以找到，然后找到性能这个参数，找到暂存盘，取消c盘，设置为别的盘，第二右边的历史记录状态数，例如改为200，自动保存设置，ctrl加k，首选项里的文件处理选择有自动存储时间，可以选择自动存储时间间隔，自定义快捷键，点击编辑，键盘快捷键。还可以修改已有快捷键。</p>
+<p> </p>
+<p> </p>
+
+<p> </p>
+<p> </p>
+<p> </p>
+<p> </p>
 
 <p> </p>
 
-<p> </p>
 
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
+<h2 id="3final关键字">3、补充2 </h2>
+<ol>
+<li> GitHub推广个人网页</li>
 
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
+    </ol>
+<p> git clone https://github.com/用户名/用户名.github.io</p>
+ <p>cd 用户名.github.io </p>
+<p> echo "Hello World" > index.html</p>
+<p>git add --all </p>
+<p> git commit -m "Initial commit"</p>
 
-<p> </p>
-
-
-<h2 id="3final关键字">3、 </h2>
-
-<p> </p>
- 
-<h4>其它文章：</h4> 
+<p>git push -u origin master </p>
+  <p> 便可以访问  https://用户名.github.io/index.html  或 用户名.github.io/index.html</p> 
+<h4>其它文章：</h4>
   <li><a href="https://liruida.github.io/webCSS.html
  
 ">web开发CSS要点总结</a></li>
