--- a/ps2tuoceng.html
+++ b/ps2tuoceng.html
@@ -80,6 +80,9 @@
 ">说明：本PS教程引用的视频教程 </a></li> 
   <li><a href="https://liruida.github.io/ps3xuanqu.html
  ">PS3选区操作</a></li>
+  <li><a href="https://liruida.github.io/index.html
+ ">GitHub博客首页</a></li>
+  
   <li><a href="https://liruida.github.io/webHTML.html
  ">web开发HTML要点总结</a></li>
    <li><a href="https://liruida.github.io/webCSS.html
