--- a/csszhishi.html
+++ b/csszhishi.html
@@ -1,1 +1,35 @@
-Hello Wor
+<html>
+  <head>
+    <meta charset="utf-8">
+  
+</head>
+<body bgcolor="cccccc">
+
+   <p>本博客包含主要讲述网页用CSS标签知识点</p>
+<h2 id="1基本定义">1、 </h2>
+
+
+  <p>代码见框内（点击代码区域可变为蓝色）</p>
+<TEXTAREA name="example2" cols="200" rows="35" color="cccccc" readonly >
+ 
+
+           </TEXTAREA>
+  代码效果图：
+  <h2 id="1基本定义">2、 </h2>
+
+
+  <p>代码见框内（点击代码区域可变为蓝色）</p>
+<TEXTAREA name="example2" cols="200" rows="35" color="cccccc" readonly >
+ 
+
+           </TEXTAREA>
+  代码效果图：
+  <h2 id="1基本定义">3、 </h2>
+
+
+  <p>代码见框内（点击代码区域可变为蓝色）</p>
+<TEXTAREA name="example2" cols="200" rows="35" color="cccccc" readonly >
+ 
+
+           </TEXTAREA>
+  代码效果图：
