--- a/webHTML.html
+++ b/webHTML.html
@@ -5,49 +5,34 @@
 </head>
 <body bgcolor="cccccc">
 
-   <p>本博客包含以下内容 有待书写</p>
-
-<ol>
-<li> </li>
-<li> </li>
-<li> </li>
-
-</ol>
-
-
-
+   <p>本博客包含主要讲述网页用CSS标签知识点</p>
 <h2 id="1基本定义">1、 </h2>
 
 
+  <p>代码见框内（点击代码区域可变为蓝色）</p>
+<TEXTAREA name="example2" cols="200" rows="35" color="cccccc" readonly >
+ 
 
-<h3 id="继承"> </h3>
-
-<p> </p>
-
-
-
-<h2 id="2初始化和类的加载">2、 </h2>
-
-<p> </p>
-
-<p> </p>
-
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
-
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
-
-<p> </p>
+           </TEXTAREA>
+  代码效果图：
+  <h2 id="1基本定义">2、 </h2>
 
 
-<h2 id="3final关键字">3、 </h2>
+  <p>代码见框内（点击代码区域可变为蓝色）</p>
+<TEXTAREA name="example2" cols="200" rows="35" color="cccccc" readonly >
+ 
 
-<p> </p>
+           </TEXTAREA>
+  代码效果图：
+  <h2 id="1基本定义">3、 </h2>
+
+
+  <p>代码见框内（点击代码区域可变为蓝色）</p>
+<TEXTAREA name="example2" cols="200" rows="35" color="cccccc" readonly >
+ 
+
+           </TEXTAREA>
+  代码效果图：
  
 <h4>其它文章：</h4> 
   <li><a href="https://liruida.github.io/webCSS.html
