--- a/ps2tuoceng.html
+++ b/ps2tuoceng.html
@@ -84,10 +84,12 @@
  ">GitHub博客首页</a></li>
   
   <li><a href="https://liruida.github.io/webHTML.html
- ">web开发HTML要点总结</a></li>
-   <li><a href="https://liruida.github.io/webCSS.html
- 
+ ">web开发HTML知识点总结</a></li>
+  <li><a href="https://liruida.github.io/csszhishi.html
+">web开发CSS知识点总结</a></li>
+   <li><a href="liruida.github.io/webCSS.html
 ">web开发CSS要点总结</a></li>
+  
    <li><a href="https://liruida.github.io/index.html 
 ">GitHub教程</a></li>
   
