--- a/ps2tuoceng.html
+++ b/ps2tuoceng.html
@@ -87,7 +87,7 @@
  ">web开发HTML知识点总结</a></li>
   <li><a href="https://liruida.github.io/csszhishi.html
 ">web开发CSS知识点总结</a></li>
-   <li><a href="liruida.github.io/webCSS.html
+   <li><a href="https://liruida.github.io/webCSS.html
 ">web开发CSS要点总结</a></li>
   
    <li><a href="https://liruida.github.io/index.html 
