--- a/webHTML.html
+++ b/webHTML.html
@@ -5,11 +5,11 @@
 </head>
 <body bgcolor="cccccc">
 
-   <p>本博客包含主要讲述网页用CSS标签知识点</p>
+   <h1>本博客包含主要讲述网页用CSS标签知识点</h1>
 <h2 id="1基本定义">1、 </h2>
 
 
-  <p>代码见框内（点击代码区域可变为蓝色）</p>
+  <h2>代码见框内（点击代码区域可变为蓝色）</h2>
 <TEXTAREA name="example2" cols="200" rows="35" color="cccccc" readonly >
  
 
@@ -18,7 +18,7 @@
   <h2 id="1基本定义">2、 </h2>
 
 
-  <p>代码见框内（点击代码区域可变为蓝色）</p>
+  <h2>代码见框内（点击代码区域可变为蓝色）</h2>
 <TEXTAREA name="example2" cols="200" rows="35" color="cccccc" readonly >
  
 
@@ -34,7 +34,7 @@
            </TEXTAREA>
   代码效果图：
  
-<h4>其它文章：</h4> 
+<h2>其它文章：</h2> 
   <li><a href="https://liruida.github.io/webCSS.html
  
 ">web开发CSS要点总结</a></li>
