--- a/webHTML.html
+++ b/webHTML.html
@@ -42,8 +42,8 @@
    
   <!--1-7普通按钮--> 
       <input type="button" value="普通按钮"/><br />
-  <!--2多行文本框 row="10" clos="100"表示10行，每行100个字符-->
-   <textarea row="10" clos="100">请输入个人简介</textarea><br />
+  <!--2多行文本框 row="10" clos="100"表示10行，每行100个字符 -->
+   <!--2多行文本框代码 <textarea row="10" clos="100">请输入个人简介</textarea><br /> -->
   <!--3下拉列表--> 
    出生日期:
    <select>
