--- a/webHTML.html
+++ b/webHTML.html
@@ -5,7 +5,7 @@
 </head>
 <body bgcolor="cccccc">
 
-   <h1>本博客包含主要讲述网页用CSS标签知识点</h1>
+   <h1>本博客包含主要讲述网页用HTML标签知识点</h1>
 <h2 id="1基本定义">1、 表单</h2>
 
 
@@ -43,7 +43,7 @@
   <!--1-7普通按钮--> 
       <input type="button" value="普通按钮"/><br />
   <!--2多行文本框 row="10" clos="100"表示10行，每行100个字符 -->
-   <!--2多行文本框代码 <textarea row="10" clos="100">请输入个人简介</textarea><br /> -->
+   <!--2多行文本框代码 《textarea row="10" clos="100"》请输入个人简介《/textarea》<br /> -->
   <!--3下拉列表--> 
    出生日期:
    <select>
