--- a/webHTML.html
+++ b/webHTML.html
@@ -110,7 +110,7 @@
 </form> 
 </body>
 </html>
-  <h2 id="1基本定义">2、 </h2>
+  <h2 id="1基本定义">2、表格 </h2>
 
 
   <h2>代码见框内（点击代码区域可变为蓝色）</h2>
@@ -119,16 +119,44 @@
 
            </TEXTAREA>
   代码效果图：
-  <h2 id="1基本定义">3、 </h2>
+  <h2 id="1基本定义">3、嵌入链接 图片 网页 </h2>
 
 
   <p>代码见框内（点击代码区域可变为蓝色）</p>
 <TEXTAREA name="example2" cols="200" rows="35" color="cccccc" readonly >
- 
+ <html>
+   <head>
+      <title></title>
+      <meta charset="utf-8" />
+      
+</head>
+<body>
+<p><a href="http://lib.csdn.net/base/javase 
+">Java SE知识库</a></p>
+<p> <img src="https://github.com/liruida/cangku1/blob/master/18.jpg?raw=true" width="500" height="550" /></p>
+<h1>将百度网页嵌入到此网页中</h1>
+<iframe src="https://www.baidu.com/" width="500px" height="300px"></iframe>
+</body>
+</html>
 
            </TEXTAREA>
-  代码效果图：
- 
+  <p>代码效果图：</p>
+  
+ <html>
+   <head>
+      <title></title>
+      <meta charset="utf-8" />
+     </head>
+<body>
+<p><a href="http://lib.csdn.net/base/javase 
+">Java SE知识库</a></p>
+<p> <img src="https://github.com/liruida/cangku1/blob/master/18.jpg?raw=true" width="500" height="550" /></p>
+<h1>将百度网页嵌入到此网页中</h1>
+<iframe src="https://www.baidu.com/" width="500px" height="300px"></iframe>
+</body>
+</html>
+  
+  
 <h2>其它文章：</h2> 
   <li><a href="https://liruida.github.io/webCSS.html
  
