--- a/webHTML.html
+++ b/webHTML.html
@@ -115,10 +115,56 @@
 
   <h2>代码见框内（点击代码区域可变为蓝色）</h2>
 <TEXTAREA name="example2" cols="200" rows="35" color="cccccc" readonly >
- 
+ 范例1：
+  <html>
+   <head>
+      <title></title>
+      <meta charset="utf-8" />
+      
+</head>
+<body>
+<table>
+  <tr>
+   <td align="right">用户名:</td>
+   <td><input type="text /"></td>
+</tr>
+
+    <tr>
+   <td align="right">密码:</td>
+   <td><input type="password /"></td>
+</tr>
+    <tr>
+     <td colspan="2"><input type="submit" value="登录" /></td>
+    </tr>
+</table>
+</body>
+</html>
 
            </TEXTAREA>
-  代码效果图：
+  <p>代码效果图：</p>
+  <html>
+   <head>
+      <title></title>
+      <meta charset="utf-8" />
+      
+</head>
+<body>
+<table>
+  <tr>
+   <td align="right">用户名:</td>
+   <td><input type="text /"></td>
+</tr>
+
+    <tr>
+   <td align="right">密码:</td>
+   <td><input type="password /"></td>
+</tr>
+    <tr>
+     <td colspan="2"><input type="submit" value="登录" /></td>
+    </tr>
+</table>
+</body>
+</html>
   <h2 id="1基本定义">3、嵌入链接 图片 网页 </h2>
 
 
