--- a/webHTML.html
+++ b/webHTML.html
@@ -125,6 +125,7 @@
 <body>
 <table>
   <tr>
+    <!--align="right"文字内容右对齐-->
    <td align="right">用户名:</td>
    <td><input type="text /"></td>
 </tr>
@@ -136,6 +137,40 @@
     <tr>
      <td colspan="2"><input type="submit" value="登录" /></td>
     </tr>
+</table>
+</body>
+</html>
+  
+  范例2：
+  <html>
+   <head>
+      <title></title>
+      <meta charset="utf-8" />
+      
+</head>
+<body>border显示边框宽度为1，cellpadding表格边框与文字距离,cellspacing单元表格之间的距离
+<table border="1" cellpadding="20px" cellspacing="5px">
+  <tr>
+    <!--补充知识td标签中colspan表示单元格横跨的列数-<td colspan="2">，rowspan表示单元格竖跨的列数-> 
+   <td>姓名</td>
+   <td>年龄</td>
+   <td>成绩</td>
+</tr>
+<tr>
+   <td>李四白</td>
+   <td>20</td>
+   <td>100</td>
+</tr>
+    <tr>
+   <td>张三丰</td>
+   <td>19</td>
+   <td>80</td>
+</tr>
+<tr>
+   <td>王小麻</td>
+   <td>18</td>
+   <td>89</td>
+</tr>
 </table>
 </body>
 </html>
@@ -165,6 +200,40 @@
 </table>
 </body>
 </html>
+  
+  
+  <html>
+   <head>
+      <title></title>
+      <meta charset="utf-8" />
+      
+</head>
+<body>border显示边框宽度为1，cellpadding表格边框与文字距离,cellspacing单元表格之间的距离
+<table border="1" cellpadding="20px" cellspacing="5px">
+  <tr>
+   <td>姓名</td>
+   <td>年龄</td>
+   <td>成绩</td>
+</tr>
+<tr>
+   <td>李四白</td>
+   <td>20</td>
+   <td>100</td>
+</tr>
+    <tr>
+   <td>张三丰</td>
+   <td>19</td>
+   <td>80</td>
+</tr>
+<tr>
+   <td>王小麻</td>
+   <td>18</td>
+   <td>89</td>
+</tr>
+</table>
+</body>
+</html>
+  
   <h2 id="1基本定义">3、嵌入链接 图片 网页 </h2>
 
 
