--- a/webHTML.html
+++ b/webHTML.html
@@ -208,7 +208,7 @@
       <meta charset="utf-8" />
       
 </head>
-<body>border显示边框宽度为1，cellpadding表格边框与文字距离,cellspacing单元表格之间的距离
+<body>
 <table border="1" cellpadding="20px" cellspacing="5px">
   <tr>
    <td>姓名</td>
