--- a/linuxlilun.html
+++ b/linuxlilun.html
@@ -1,1 +1,95 @@
-Hello World
+<html>
+  <head>
+    <meta charset="utf-8">
+  <style type="text/css">
+       
+     p{
+       text-indent:2em;
+       }
+</style>
+</head>
+<body bgcolor="cccccc">
+
+   <p>本博客包含以下内容 </p>
+
+<ol>
+<li></li>
+<li>
+ </li>
+<li> </li>
+<li></li>
+<li>
+ </li>
+<li></li>
+</ol>
+
+
+
+<h2 id="1基本定义">1、</h2>
+
+
+
+<h3 id="继承"> </h3>
+
+
+
+<h2 id="2初始化和类的加载">2、</h2>
+
+
+<p> </p>
+<p> </p>
+
+<p> </p>
+
+
+<h2 id="3final关键字">3、 </h2>
+
+
+<p> </p>
+  
+<p> </p>
+ <h2> 4.</h2>
+
+
+
+<p> </p>
+<p> </p>
+<p> </p>
+  <h2> 5.</h2>
+
+
+<p> </p>
+<p> </p>
+
+<p> </p>
+<p> </p>
+<p> </p><h2> 6.</h2>
+
+<p> </p>
+ <p> </p>
+<p> </p>
+<p> </p>
+<p> </p>
+<p> </p>
+<p> </p>
+
+<p> </p>
+<p> </p>
+<p> </p>
+  
+<h6>其它文章：</h6> 
+  <li><a href="https://liruida.github.io/webCSS.html
+ 
+">web开发CSS要点总结</a></li>
+  <li><a href="https://liruida.github.io/ps2tuoceng.html 
+">PS层次2~~图层操作</a></li>
+ 
+  <li><a href="http://www.w3school.com.cn/ 
+">w3c官网发布标签</a></li>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+  <p>&nbsp;&nbsp;&nbsp;</p>
+  <p>&nbsp;&nbsp;&nbsp;日积月累&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;挟山超海&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;弗能撼也&nbsp;&nbsp;&nbsp;&nbsp;</p>
+    </body>
+</html>
