--- a/linuxshizhan.html
+++ b/linuxshizhan.html
@@ -131,7 +131,7 @@
 <p> </p>
 <p> </p><h2> 6.文件与目录权限</h2>
 
-<p> </p>
+<p> <img src="https:" width="500" height="550" /></p>
  <p> </p>
 <p> </p>
 <p> </p>
