--- a/linuxlilun.html
+++ b/linuxlilun.html
@@ -27,7 +27,7 @@
 
 <h2 id="1基本定义">1、</h2>
 
-
+<p> <img src="https:" width="500" height="550" /></p>
 
 <h3 id="继承"> </h3>
 
@@ -36,7 +36,7 @@
 <h2 id="2初始化和类的加载">2、</h2>
 
 
-<p> </p>
+ <p> <img src="https:" width="500" height="550" /></p>
 <p> </p>
 
 <p> </p>
