--- a/linuxshizhan.html
+++ b/linuxshizhan.html
@@ -131,8 +131,8 @@
 <p> </p>
 <p> </p><h2> 6.文件与目录权限</h2>
 
-<p> <img src="https:" width="500" height="550" /></p>
- <p> </p>
+<p> <img src="https://github.com/liruida/cangku1/blob/master/28.jpg?raw=true" width="500" height="550" /></p>
+ <p> <img src="https://github.com/liruida/cangku1/blob/master/29.jpg?raw=true" width="500" height="550" /></p>
 <p> </p>
 <p> </p>
 <p> </p>
