--- a/ps2tuoceng.html
+++ b/ps2tuoceng.html
@@ -14,7 +14,7 @@
 
 </ol>
 
-
+<a href=#bottom>点击到页面底部</a>
 
 <h2 id="1基本定义">1、图层基本概念</h2>
 
@@ -94,7 +94,7 @@
 ">GitHub教程</a></li>
   
   
-  
+  <a name=#bottom></a>
   <p>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;&nbsp;&nbsp;</p>
