--- a/ps2tuoceng.html
+++ b/ps2tuoceng.html
@@ -13,8 +13,8 @@
 <li>移动工具</li>
 
 </ol>
+<a href="#c">点击到页面底部</a>
 
-<a href=#bottom>点击到页面底部</a>
 
 <h2 id="1基本定义">1、图层基本概念</h2>
 
@@ -100,6 +100,6 @@
   <p>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;朴者，道之华也&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-  <a name=#bottom></a>
+  <a name="c"></a>
     </body>
 </html>
