--- a/linuxshizhan.html
+++ b/linuxshizhan.html
@@ -10,7 +10,7 @@
 </style>
 </head>
 <body bgcolor="cccccc">
-
+<a name="b"></a>
    <p>本博客包含以下内容 </p>
 
 <ol>
@@ -24,7 +24,7 @@
 <li>文件与目录权限</li>
 </ol>
 
-
+<a href="#c">点击回到底部</a>
 
 <h2 id="1基本定义">1、文件操作命令上 touch file cp mv rm </h2>
 
@@ -142,7 +142,7 @@
 <p> </p>
 <p> </p>
 <p> </p>
-  
+  <a href="#b">点击回到顶部</a>
 <h6>其它文章：</h6> 
   <li><a href="https://liruida.github.io/webCSS.html
  
@@ -158,7 +158,9 @@
   <p>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;&nbsp;&nbsp;</p>
   <p>&nbsp;&nbsp;&nbsp;日积月累&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;挟山超海&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;弗能撼也&nbsp;&nbsp;&nbsp;&nbsp;</p>
-    </body>
+    <a name="c"></a>
+  
+  </body>
 </html>
 
 
