--- a/webCSS.html
+++ b/webCSS.html
@@ -275,7 +275,7 @@
             </div>
 </body>
 </html>
-<h2 id="2初始化和类的加载">2、定位 </h2>
+<h2 id="2初始化和类的加载"> </h2>
 
 <p> </p>
 
@@ -294,7 +294,7 @@
 <p> </p>
 
 
-<h2 id="3final关键字">3、 </h2>
+<h2 id="3final关键字"> </h2>
 
 <p> </p>
  
